[gd_scene load_steps=4 format=3 uid="uid://c8grid001"]

[ext_resource type="Script" path="res://scripts/grid/game_grid.gd" id="1_grid"]

[sub_resource type="PlaneMesh" id="PlaneMesh_1"]
size = Vector2(4, 4)

[sub_resource type="StandardMaterial3D" id="GridFloorMat"]
albedo_color = Color(0.12, 0.12, 0.12, 1)
roughness = 0.9

[node name="GameGrid" type="Node3D"]
script = ExtResource("1_grid")

[node name="GridFloor" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 1.5)
mesh = SubResource("PlaneMesh_1")
material_override = SubResource("GridFloorMat")

[node name="GridLines" type="Node3D" parent="."]
